--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "selenium-mock",
+  "homepage": "https://bouhm.github.io/selenium-mock",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
